infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkp-ingress
  namespace: api
  labels:
    app.kubernetes.io/name: dkp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: dkp.local
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/auth
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - pathType: Prefix
            path: /api/v1/account
            backend:
              service:
                name: account-srv
                port:
                  number: 3001
